# CVM-

./: CMakeLists.txt  README.md
examples/: 01_basics.cvm  02_conditions.cvm  03_loop.cvm  04_factorial.cvm  05_truth.cvm
include/: ast.h  compiler.h  lexer.h  opcodes.h  parser.h  vm.h
src/: compiler.cpp  lexer.cpp  main.cpp  parser.cpp  vm.cpp
